# learning-cmake

./: .clang-format  .cmake-format.yaml  .editorconfig  .gitignore  LICENSE  README.md
modern_cmake/: prompt.md
modern_cmake/class01_target/: CMakeLists.txt  note.md
modern_cmake/class02_struct/: CMakeLists.txt
modern_cmake/class02_struct/src/driver/: CMakeLists.txt
modern_cmake/class03_dependency/: CMakeLists.txt  note.md
modern_cmake/class03_dependency/src/fusion/: CMakeLists.txt
modern_cmake/class04_condition/: CMakeLists.txt  imu_driver.cpp  note.md
modern_cmake/class05_export/: CMakeLists.txt  note.md
modern_cmake/class05_export/cmake/: ImuProjectConfig.cmake.in
modern_cmake/class05_export/include/driver/: imu_driver.h
modern_cmake/class05_export/src/: main.cpp
modern_cmake/class05_export/src/driver/: CMakeLists.txt
modern_cmake/class05_export/src/fusion/: CMakeLists.txt  imu_fusion.cpp
modern_cmake/class06_compile_para/: CMakeLists.txt  note.md
modern_cmake/class06_compile_para/include/fusion/: imu_fusion.h
modern_cmake/class06_compile_para/src/driver/: imu_driver.cpp
modern_cmake/class06_compile_para/src/fusion/: CMakeLists.txt
modern_cmake/class07_ctest/: CMakeLists.txt  note.md
modern_cmake/class07_ctest/src/driver/: CMakeLists.txt
modern_cmake/class07_ctest/src/fusion/: CMakeLists.txt
modern_cmake/class07_ctest/src/fusion/tests/: CMakeLists.txt  test_fusion.cpp
modern_cmake/class08_cmakejson/: CMakeLists.txt  CMakePresets.json  main.cpp  note.md  tests.cpp
modern_cmake/class09_project_GeoUtils/: CMakeLists.txt  CMakePresets.json  note.md
modern_cmake/class09_project_GeoUtils/cmake/: GeoUtilsConfig.cmake.in
modern_cmake/class09_project_GeoUtils/src/app/: CMakeLists.txt  main.cpp
modern_cmake/class09_project_GeoUtils/src/geo_algo/: CMakeLists.txt  collision.cpp
modern_cmake/class09_project_GeoUtils/src/tests/: test_algo.cpp  test_core.cpp
modern_cmake/class10_isolation/: README.md  note.md
modern_cmake/class10_isolation/include/geo_algo/: collision.h
modern_cmake/class10_isolation/include/geo_core/: point.h
modern_cmake/class10_isolation/src/app/: CMakeLists.txt
modern_cmake/class10_isolation/src/fast_matrix/: CMakeLists.txt  fast_matrix.cpp
modern_cmake/class11_cross_compile/: CMakeLists.txt  CMakePresets.json  README.md
modern_cmake/class11_cross_compile/cmake/: aarch64_toolchain.cmake
modern_cmake/class11_cross_compile/include/fast_matrix/: fast_matrix.h
modern_cmake/class11_cross_compile/src/app/: main.cpp
modern_cmake/class11_cross_compile/src/geo_core/: CMakeLists.txt  point.cpp
modern_cmake/class11_cross_compile/src/tests/: CMakeLists.txt
project_1/: CMakeLists.txt
project_1/src/: b.cpp
project_3/src/: a.cpp
project_4/: main.cpp
project_5/: CMakeLists.txt
project_5/include/: labc.h
project_5/lxyz/: CMakeLists.txt  x.cpp
project_5/test1/: main.cpp
project_5/test2/: CMakeLists.txt
project_6/lchild/: CMakeLists.txt
project_7/include/: child.h  lxyz.h
project_7/labc/: a.cpp
project_7/lchild/: CMakeLists.txt
project_7/lxyz/: x.cpp
project_8/: CMakeLists.txt  bench_O3_VS_O0-g.md
project_9/: CMakeLists.txt  arm-linux-toolchain.cmake  note.md
traditional_cmake/project_2/: CMakeLists.txt
traditional_cmake/project_2/src/: c.cpp
traditional_cmake/project_3/: CMakeLists.txt
traditional_cmake/project_3/include/: head.h
traditional_cmake/project_4/: CMakeLists.txt  laCMakeLists.txt
traditional_cmake/project_5/labc/: CMakeLists.txt  b.cpp
traditional_cmake/project_5/lxyz/: y.cpp  z.cpp
traditional_cmake/project_5/test1/: CMakeLists.txt
traditional_cmake/project_5/test2/: main.cpp
traditional_cmake/project_6/labc/: c.cpp
traditional_cmake/project_6/lchild/: child.cpp
traditional_cmake/project_6/lxyz/: CMakeLists.txt
traditional_cmake/project_6/test/: CMakeLists.txt
traditional_cmake/project_7/: CMakeLists.txt
traditional_cmake/project_7/lxyz/: CMakeLists.txt
traditional_cmake/project_8/: CMakeLists-old.txt  cmd.md  main.cpp
traditional_cmake/project_9/: main.cpp
